--- a/POS/templates/admin/base_site.html
+++ b/POS/templates/admin/base_site.html
@@ -1,4 +1,5 @@
 {% extends "admin/base.html" %}
+{% load static %}
 
 {% block title %}{% if subtitle %}{{ subtitle }} | {% endif %}{{ title }} | {{ site_title|default:_('Django site admin') }}{% endblock %}
 
@@ -26,13 +27,16 @@
     
 
 .dropbtn {
-    background-color: #3498DB;
+    background-color: #5eade2;
     color: white;
     padding: 16px;
     font-size: 16px;
+    min-width: 150px;
     border: none;
     cursor: pointer;
     border-radius: 10px;
+    font-weight: bold;
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.2) ;
 }
   
 .dropbtn:hover, .dropbtn:focus {
@@ -49,13 +53,16 @@
     right: 0;
     position: absolute;
     background-color: rgba(0,0,0,0.2);
-    min-width: 160px;
-    overflow: auto;
+    min-width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
     border-bottom-left-radius: 5px;
     border-top-left-radius: 5px;
     border-bottom-right-radius: 5px;
+}
+
+.dropdown-content i {
+    margin-right: 10px;
 }
   
 .dropdown-content a {
